The following list contains all changes to pgAdmin3, as present in svn. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2006-01-09 DP  1.4.2  Set the initial Unicode/Local charset options correctly in the Export dialogue [Magnus Hagander]
    <li>2005-12-26 AP  1.4.2  Fix PK detection in EditGrid per Andrus Moor
    <li>2005-12-26 AP  1.4.2  Fix Bitmap Index explain per Alexander Kirpa
    <li>2005-12-23 DP  1.4.2  Use ELSIF not ELSEIF in pgagent.sql for compatibility with 7.x servers [Glen Sasek]
    <li>2005-12-22 HS         dlgLanguage name+comment, dlgDatabase comment
    <li>2005-12-15 DP  1.4.2  Exclude system schemas by name rather than OID, so that 'public' can be safely renamed.
    <li>2005-12-12 AP  1.4.2  fix slony node statistics
    <li>2005-12-11 AP         support 8.1 language templates
    <li>2005-12-11 AP  1.4.2  Fix: Unsubscribe set on receiver
    <li>2005-12-11 AP  1.4.2  Another wxComboBox(2.6.2) related fix
    <li>2005-12-09 DP  1.4.1  Default the encoding of new databases to the cluster encoding, per Peter Eisentraut.
    <li>2005-12-09 DP  1.4.1  Sort encoding names in dlgDatabase, per Peter Eisentraut.
    <li>2005-12-06 AP  1.4.1  store UTF8 connect info in pgpass.conf if necessary
    <li>2005-12-03 AP  1.4.1  Major fix for wx2.6.2 API changes (comboboxes)
    <li>2005-12-02 DP  1.4.1  Drop constraints on columns before the columns themselves [Miha Radej]
    <li>2005-12-01 AP  1.4.1  Deal with incompatible wx2.6.2 API changes (comboboxes)
    <li>2005-11-30 AP  1.4.1  Graphical explain: distinct scan images
    <li>2005-11-25 DP  1.4.1  Fix the server status SQL query
    <li>2005-11-25 FGP 1.4.1  Don't include pgAgent in the Mac OSX bundle