@@ -55,6 +55,7 @@ enum
     MNU_CLEARHISTORY,
     MNU_SAVEHISTORY,
     MNU_CHECKALIVE,
+	MNU_SELECTALL,
 
     MNU_CONTENTS,
     MNU_HELP,
