@@ -18,6 +18,7 @@ The following list contains all changes to pgAdmin3, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2006-01-09 DP         Use Ctrl-A to select all results in the query results pane. [Magnus Hagander]
     <li>2006-01-09 DP  1.4.2  Set the initial Unicode/Local charset options correctly in the Export dialogue [Magnus Hagander]
     <li>2005-12-26 AP  1.4.2  Fix PK detection in EditGrid per Andrus Moor
     <li>2005-12-26 AP  1.4.2  Fix Bitmap Index explain per Alexander Kirpa
